<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#66666666"
        android:gravity="center_vertical|left"
        android:text="@string/screen_display_name"
        android:textColor="#ffffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tvTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/screen_display_tips" />

        <TextView
            android:id="@+id/tvColorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:text="红色"
            android:background="#FFFFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/btnsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#66666666"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPass"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPass" />

        <Button
            android:id="@+id/btnFail"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFail" />
    </LinearLayout>

</LinearLayout>