<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#66666666"
        android:gravity="center_vertical|left"
        android:text="@string/wlan_addr_name"
        android:textColor="#ffffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="测试结果" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="测试结果" />

            <TextView
                android:id="@+id/tvXX"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="|" />

            <Button
                android:id="@+id/btnRetest"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retest" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#66666666"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPass"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPass" />

        <Button
            android:id="@+id/btnFail"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFail" />
    </LinearLayout>

</LinearLayout>