<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#66666666"
        android:gravity="center_vertical|left"
        android:text="音频测试"
        android:textColor="#ffffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"
            android:text="@string/headset_state" />

        <TextView
            android:id="@+id/tvHeadsetState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvLabel"
            android:layout_alignBottom="@+id/tvLabel"
            android:layout_toRightOf="@+id/tvLabel"
            android:text="@string/unchecked" />

        <TextView
            android:id="@+id/tvMusicState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvMusicTips"
            android:text="状态" />

        <TextView
            android:id="@+id/tvRecState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvRecTips"
            android:text="状态" />

        <TextView
            android:id="@+id/tvMusicTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvLabel"
            android:layout_marginTop="25dp"
            android:text="2.音乐播放,请确认SD卡或SATA硬盘根目录存在音频文件1kHZ.mp3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvRecState"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnRecStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.录音开始" />

                <Button
                    android:id="@+id/btnRecStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.录音结束" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnPlyStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3.播放开始" />

                <Button
                    android:id="@+id/btnPlyStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.播放结束" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvRecTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvMusicState"
            android:layout_marginTop="100dp"
            android:text="3.录音测试,先录一段音频,然后播放.聆听后判断" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvMusicState"
            android:layout_marginTop="17dp" >

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.音乐播放" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.音乐停止" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#66666666"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPass"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPass" />

        <Button
            android:id="@+id/btnFail"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFail" />
    </LinearLayout>

</LinearLayout>